# guardrails-azure-openai-demo

./: .env.example  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routers/: generate.py
app/core/: guard.py  settings.py
